# Charuco

./: README.md
Charuco_Cali/: 64652_cali.xml  CMakeLists.txt  camera_calibration  input.xml
Charuco_Cali/Images/64652/: 64652.xml
Charuco_Pose/: CMakeLists.txt  Charuco_Pose  input.xml  poses.txt
Charuco_Pose/Images/: list.xml
Charuco_Pose/src/: detect_Charuco_pose.cpp  tutorial_Charuco.cpp
